# vcmp-python-plugin

./: CMakeLists.txt  EventHandler.h  PythonModule.h  README.md  appveyor.yml  main.cpp  main.h  plugin.h
_vcmp/: callbacks.pyi  functions.pyi
converters/: args_list.py  calls.conv.txt  calls.txt  calls_convert.py  funcs.conv.txt  funcs.txt  funcs_convert.py  name_convert.py  t.py
